--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
 <body>
  <h1> Exercícios JavaScript </h1><br>
   <ul>
-    <li><a href="primeiro.html">Exercício 1</a></li>
-    <li><a href="segundo.html">Exercício 2</a></li>
-    <li><a href="terceiro.html">Exercício 3</a></li>
-    <li><a href="quarto.html">Exercício 4</a></li>
-    <li><a href="quinto.html">Exercício 5</a></li>
-    <li><a href="sexto.html">Exercício 6</a></li>
-    <li><a href="setimo.html">Exercício 7</a></li>
-    <li><a href="oitavo.html">Exercício 8</a></li>
-    <li><a href="back4app1.html">Back4App 1</a></li>
+    <li><a href="exercicios/primeiro.html">Exercício 1</a></li>
+    <li><a href="exercicios/segundo.html">Exercício 2</a></li>
+    <li><a href="exercicios/terceiro.html">Exercício 3</a></li>
+    <li><a href="exercicios/quarto.html">Exercício 4</a></li>
+    <li><a href="exercicios/quinto.html">Exercício 5</a></li>
+    <li><a href="exercicios/sexto.html">Exercício 6</a></li>
+    <li><a href="exercicios/setimo.html">Exercício 7</a></li>
+    <li><a href="exercicios/oitavo.html">Exercício 8</a></li>
+    <li><a href="Back4App/Primeiro/back4app1.html">Back4App 1</a></li>
   </ul>  
 </body>
 </html>
